...
        app:layout_constraintHorizontal_bias="0.159"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:background="@color/purple_700" />

    <ImageButton
        android:id="@+id/favBut"
        android:layout_width="34dp"
        android:layout_height="30dp"
        android:layout_marginEnd="44dp"
        android:background="#00FFFFFF"
        android:src="@drawable/ic_fav_off"
        app:layout_constraintBottom_toTopOf="@+id/textView"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/poster"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/describe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_layout"
            android:fontFamily="@font/patrick_hand"
            android:lineSpacingExtra="2sp"
            android:padding="@dimen/movie_title_padding"
...
